# wcs-ocaml

./: .gitignore  .merlin  .ocp-indent  CHANGES.md  CONTRIBUTING.md  LICENSE.txt  META.wcs-api.template  Makefile  README.md  wcs-api-jsoo.opam  wcs-api-unix.opam  wcs-api.opam  wcs-lib.opam  wcs.opam
docs/: index.html  index.md  wcs.md
examples/: Makefile  example.ml  fact.ml  jbuild  knock.ml  knock_spel.ml  knock_spel_string.ml  knockknock.ml
src/: .gitignore  Makefile  context.ml  context.mli  dialog_t.ml  json.ml  json.mli  json_t.ml  json_t.mli  json_util.ml  json_util.mli  log.ml  log.mli  test.ml  translation.ml  wcs.atd  wcs.ml  wcs.mli  wcs.odocl  wcs_bot.ml  wcs_bot.mli  wcs_builder.ml  wcs_builder.mli  wcs_cli.ml  wcs_json.ml  wcs_json.mli  wcs_util.ml  wcslib.mllib  ws_builder.ml  ws_builder.mli
wcs-api/: jbuild  wcs.ml  wcs.mli  wcs_api.ml  wcs_api.rmli  wcs_bot.ml  wcs_bot.mli  wcs_bot.rmli  wcs_call_factory.ml
wcs-api-jsoo/: jbuild  wcs_api_jsoo.ml  wcs_api_jsoo.rmli  wcs_bot.ml  wcs_bot_jsoo.ml  wcs_bot_jsoo.mli  wcs_bot_jsoo.rmli  wcs_call.ml  wcs_call_jsoo.ml  wcs_call_jsoo.mli
wcs-api-unix/: jbuild  wcs_api_unix.ml  wcs_api_unix.rmli  wcs_bot.ml  wcs_bot_unix.ml  wcs_call.ml  wcs_call.mli  wcs_call_unix.ml
wcs-cli/: jbuild  wcs_cli.ml  wcs_cmd.ml
wcs-lib/: Makefile  atdgen_to_rml.ml  context.ml  context.mli  context_spel.ml  context_spel.mli  dialog_t.ml  jbuild  json.ml  json.mli  json_spel.ml  json_spel.mli  json_spel_j.ml  json_spel_j.mli  json_spel_t.ml  json_spel_t.mli  json_spel_t.rmli  json_t.ml  json_t.mli  json_t.rmli  log.ml  (+39 more)
(+296 files in other folders)
